--- a/3-column-preview-card-component-main/style.css
+++ b/3-column-preview-card-component-main/style.css
@@ -58,3 +58,9 @@ button {
   justify-content: center;
   align-items: center;
 }
+
+@media screen and (max-width< 440px) {
+  .outer-box {
+    display: inline-flex;
+  }
+}
